{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 172,
  "lineage": "4ca3af9d-9021-150a-f6c3-f36772a6edf4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_nocodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.155.139.235",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-13T07:37:43.690-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-quickdata/regions/europe-west9/addresses/static-ip-nocodb",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "static-ip-nocodb",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "project-quickdata",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/regions/europe-west9/addresses/static-ip-nocodb",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/project-quickdata/zones/europe-west9-b/instances/nocodb-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_gcp_ssh2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-13T06:36:37.981-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-quickdata/global/firewalls/allow-gcp-ssh2",
            "log_config": [],
            "name": "allow-gcp-ssh2",
            "network": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/networks/rocketvpc",
            "priority": 1000,
            "project": "project-quickdata",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/firewalls/allow-gcp-ssh2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gcp-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-13T07:37:43.758-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-quickdata/global/firewalls/allow-node-exporter",
            "log_config": [],
            "name": "allow-node-exporter",
            "network": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/networks/default",
            "priority": 1000,
            "project": "project-quickdata",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/firewalls/allow-node-exporter",
            "source_ranges": [
              "34.163.103.61/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "node-exporter"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "32222"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-13T07:37:43.764-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-quickdata/global/firewalls/allow-proxy-port",
            "log_config": [],
            "name": "allow-proxy-port",
            "network": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/networks/default",
            "priority": 1000,
            "project": "project-quickdata",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/firewalls/allow-proxy-port",
            "source_ranges": [
              "10.10.2.2/32",
              "34.155.139.235/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "proxy-port"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-13T06:57:17.203-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-quickdata/global/firewalls/allow-ssh-from-bastion",
            "log_config": [],
            "name": "allow-ssh-from-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/networks/rocketvpc",
            "priority": 1000,
            "project": "project-quickdata",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/firewalls/allow-ssh-from-bastion",
            "source_ranges": [
              "10.10.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nocodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nocodb-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": false,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250212",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-quickdata/zones/europe-west9-b/disks/nocodb-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-13T06:35:35.655-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "hostname": "nocodb.local",
            "id": "projects/project-quickdata/zones/europe-west9-b/instances/nocodb-instance",
            "instance_id": "1988699607827177928",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "engineer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC5AQlkV4LUjLcBOpn6Nz42lOhxeWQ0d59P7vusbPi3NOdz1LZwQLJ/4Ju2RoMPBH9ZHDfJC7+V0wwEdTbpgMrdsxwZdY6awrr4CtuC1M+FIpv+7azsjXBW3286SIuEohM0nSMZjbIxZhShs94stH3JRD85daZStWHmHn/7yj2wrmlpQQfTHwLaDDHum999yiQgO40vnxckCriLO27ZYoE0+xFlPctQtbF3bDuvcmwUabdfA1fw9dj9HlakrWaRPShK9Bu2THsNZQmPS/ICB3lA9YqY7xdK7ck1S8uzsCOJiI3cbX8qqqxhO0SoI0xFkFmmMjvctxngvhelCrBtnsrGNmF4CJnCd+5IGW6R5JY52Bj7PX0Qy27uDDQCWEGDiUXWb9qIGcypm2slG7wluLPh1EP2QmgkSwn69wE6Bg6q [...]
            },
            "metadata_fingerprint": "BuYbS8kyDZI=",
            "name": "nocodb-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.139.235",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-quickdata/global/networks/rocketvpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-quickdata/regions/europe-west9/subnetworks/subnet-nocodb",
                "subnetwork_project": "project-quickdata"
              }
            ],
            "project": "project-quickdata",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-quickdata/zones/europe-west9-b/instances/nocodb-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion",
              "gcp-ssh",
              "nocodb"
            ],
            "tags_fingerprint": "rCyElzHPq7w=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west9-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip_nocodb"
          ]
        }
      ]
    }
  ]
}